--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "start": "node src/server.ts",
+    "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
     "build": "tsc"
   },
