--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "ts-node src/server.ts",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
