--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node api/index.ts",
-    "build": "tsc"
+    "dev": "ts-node api/index.ts"
   },
   "keywords": [],
   "author": "",
